--- a/ui.frontend/src/components/Page/Page.css
+++ b/ui.frontend/src/components/Page/Page.css
@@ -14,8 +14,9 @@
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-.page {
+ .page {
   max-width: 1024px;
   margin: 0 auto;
   padding: 12px;
+  padding-top: 50px;
 }
